Not show close for pinned notification on hover

When the notification is
* in notification center (not popup)
* pinned
then, we should not show close button on mouse hover.

TEST=manual
BUG=829582

Change-Id: Idcd6cbe70fe880ddabc6d90bdd0a9f764a01295d
Reviewed-on: https://chromium-review.googlesource.com/1000653
Reviewed-by: Evan Stade <estade@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#549215}
Former-commit-id: 12686f987b2b63a2903df059ebef273c0effdc90